Attempt to fix @font-face problem for Android browser. See: http://stackoverflow.com/questions/3200069/css-fonts-on-android

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -21,7 +21,7 @@ $navbarLinkColorHover: #fff;
 @font-face 
 {
 font-family: "Julius Sans One";
-src: url('JuliusSansOne.ttf');  
+src: url(http://:/) format("No-IE-404"), url('JuliusSansOne.ttf') format('truetype');
 }
 
 @font-face
